fix: letter spacing change for better aesthetics

--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -21,6 +21,7 @@
 
         @include mq(md) {
             font-size: 5.875rem; //94px
+            letter-spacing: -2px;
         }
     }
     &__pretitle {
